# coref-inst

./: .gitignore  CITATION.cff  ETHICS.md  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
config/: config.yaml  requirements.txt
config/instructions/: instruction1.txt  instruction2.txt  instruction3.txt  instruction4.txt  instruction5.txt
coref_inst.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/: config_example.py
scripts/: README.md  verify_setup.sh
scripts/evaluation/: auto_infer.sh  auto_map.sh  mapper.sh
scripts/inference/: inference_unsloth.sh
scripts/setup/: get.sh
scripts/slurm/: submit_job.sh
scripts/training/: train_few.sh  train_few_orgTraining.sh  train_unified.sh  train_unsloth.sh
src/: __init__.py  config_utils.py  constants.py
src/data_processing/: __init__.py
src/data_processing/format_dataset/: dataset.py  dataset.sh  few_shot_ds.sh  jsonl2HF.py  merge_files.sh
src/evaluation/: __init__.py
src/evaluation/mapper/: check_forms.ipynb  map.py  mapV2.py  map_cross.py  map_pred.py  mapper_commands.txt  print_results.ipynb
src/inference/: __init__.py  infer.py
src/training/: __init__.py  train_unified.py
