[metadata]
name = coref-inst
version = 1.0.0
author = "Tuğba Pamay Arslan, Emircan Erol, Gülşen Eryiğit"
author_email = "tpamay@itu.edu.tr, erole20@itu.edu.tr"
description = Coreference Resolution with Large Language Models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/itunlplab/coref-inst
project_urls =
    Bug Tracker = https://github.com/itunlplab/coref-inst/issues
    Documentation = https://github.com/itunlplab/coref-inst#readme
    Source Code = https://github.com/itunlplab/coref-inst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing :: Linguistic

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch>=2.0.0
    transformers>=4.30.0
    datasets>=2.10.0
    numpy>=1.21.0
    tqdm>=4.64.0
    trl>=0.7.0
    wandb>=0.15.0
    udapi>=0.4.0
    pyyaml>=6.0

[options.packages.find]
include = src*

[options.extras_require]
dev =
    pytest>=6.0
    black>=22.0
    flake8>=4.0
    mypy>=0.910
    pre-commit>=2.15
notebooks =
    jupyter>=1.0
    ipywidgets>=7.6
    matplotlib>=3.5
evaluation =
    scikit-learn>=1.0
    pandas>=1.3
    # Note: CorefUD scorer must be installed separately
    # See: https://github.com/ufal/corefud-scorer

[options.entry_points]
console_scripts =
    coref-train = src.training.train_unified:main
    coref-infer = src.inference.infer:main
